Fixed overflow of sidebar on mobile

--- a/components/Sidebar/Sidebar.styl
+++ b/components/Sidebar/Sidebar.styl
@@ -74,6 +74,7 @@ $sidebar_width_closed = 9rem
 		top 0
 		right 0
 		height 100vh
+		overflow-y auto
 
 		&
 		.is_open &
